deployment-cp1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apim-wso2am-all-in-one-am-deployment-1
  namespace: wso2
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: apim-wso2am-all-in-one-am
      node: apim-wso2am-all-in-one-am-1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        deployment: apim-wso2am-all-in-one-am
        node: apim-wso2am-all-in-one-am-1
        product: apim
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: deployment
                  operator: In
                  values:
                  - apim-wso2am-all-in-one
              topologyKey: topology.kubernetes.io/zone
            weight: 100
      containers:
      - env:
        - name: NODE_IP
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: status.podIP
        - name: JVM_MEM_OPTS
          value: -Xms2048m -Xmx2048m
        image: docker.io/bimdevops/wso2-apim-cp-mysql@sha256:c3c01eedd0f1d6b4027ef03da3cfb6b4feb33c47af625f7d07290fab6d9f7379
        imagePullPolicy: IfNotPresent
        lifecycle:
          preStop:
            exec:
              command:
              - sh
              - -c
              - |
                echo "Pre stop hook triggered"; sleep 10; echo "Shutdown APIM Server"; ${WSO2_SERVER_HOME}/bin/api-manager.sh stop
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /services/Version
            port: 9763
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: wso2am
        ports:
        - containerPort: 8280
          protocol: TCP
        - containerPort: 8243
          protocol: TCP
        - containerPort: 9763
          protocol: TCP
        - containerPort: 9443
          protocol: TCP
        - containerPort: 9711
          protocol: TCP
        - containerPort: 9611
          protocol: TCP
        - containerPort: 5672
          protocol: TCP
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /api/am/gateway/v2/server-startup-healthcheck
            port: 9443
            scheme: HTTPS
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: "3"
            memory: 3Gi
          requests:
            cpu: "2"
            memory: 2Gi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsGroup: 10001
          runAsNonRoot: true
          runAsUser: 10001
        startupProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - timeout 1 bash -c "</dev/tcp/localhost/9443"
          failureThreshold: 5
          initialDelaySeconds: 120
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /home/wso2carbon/wso2-config-volume/repository/conf/deployment.toml
          name: wso2am-conf
          subPath: deployment.toml
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 263
          name: apim-wso2am-all-in-one-am-conf-1
        name: wso2am-conf
