service-cp.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    name: apim-wso2am-all-in-one-am-service
    namespace: wso2
  spec:
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: pass-through-http
      port: 8280
      protocol: TCP
      targetPort: 8280
    - name: pass-through-https
      port: 8243
      protocol: TCP
      targetPort: 8243
    - name: binary
      port: 9611
      protocol: TCP
      targetPort: 9611
    - name: binary-secure
      port: 9711
      protocol: TCP
      targetPort: 9711
    - name: jms-tcp
      port: 5672
      protocol: TCP
      targetPort: 5672
    - name: servlet-https
      port: 9443
      protocol: TCP
      targetPort: 9443
    - name: websub-http
      port: 9021
      protocol: TCP
      targetPort: 9021
    - name: websub-https
      port: 8021
      protocol: TCP
      targetPort: 8021
    selector:
      deployment: apim-wso2am-all-in-one-am
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    name: apim-wso2am-all-in-one-am-service-1
    namespace: wso2
  spec:
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: pass-through-http
      port: 8280
      protocol: TCP
      targetPort: 8280
    - name: pass-through-https
      port: 8243
      protocol: TCP
      targetPort: 8243
    - name: binary
      port: 9611
      protocol: TCP
      targetPort: 9611
    - name: binary-secure
      port: 9711
      protocol: TCP
      targetPort: 9711
    - name: jms-tcp
      port: 5672
      protocol: TCP
      targetPort: 5672
    - name: servlet-https
      port: 9443
      protocol: TCP
      targetPort: 9443
    - name: websub-http
      port: 9021
      protocol: TCP
      targetPort: 9021
    - name: websub-https
      port: 8021
      protocol: TCP
      targetPort: 8021
    selector:
      deployment: apim-wso2am-all-in-one-am
      node: apim-wso2am-all-in-one-am-1
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    name: apim-wso2am-all-in-one-am-service-2
    namespace: wso2
  spec:
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: pass-through-http
      port: 8280
      protocol: TCP
      targetPort: 8280
    - name: pass-through-https
      port: 8243
      protocol: TCP
      targetPort: 8243
    - name: binary
      port: 9611
      protocol: TCP
      targetPort: 9611
    - name: binary-secure
      port: 9711
      protocol: TCP
      targetPort: 9711
    - name: jms-tcp
      port: 5672
      protocol: TCP
      targetPort: 5672
    - name: servlet-https
      port: 9443
      protocol: TCP
      targetPort: 9443
    - name: websub-http
      port: 9021
      protocol: TCP
      targetPort: 9021
    - name: websub-https
      port: 8021
      protocol: TCP
      targetPort: 8021
    selector:
      deployment: apim-wso2am-all-in-one-am
      node: apim-wso2am-all-in-one-am-2
    sessionAffinity: None
    type: ClusterIP
kind: List
metadata:
  resourceVersion: ""
